[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/enemies/goblin/goblin (1).png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.875, 51.125 )

[sub_resource type="CircleShape2D" id=2]
radius = 963.984

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 53.125 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.125, -0.125007 )
shape = SubResource( 1 )

[node name="Area2D - Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D - Detection"]
shape = SubResource( 2 )

[node name="Area2D - DamageCol" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D - DamageCol"]
position = Vector2( -2.5, 0.625007 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/RESET = SubResource( 4 )
anims/walk = SubResource( 5 )

[connection signal="body_entered" from="Area2D - Detection" to="." method="_on_Area2D__Detection_body_entered"]
[connection signal="body_exited" from="Area2D - Detection" to="." method="_on_Area2D__Detection_body_exited"]
[connection signal="body_entered" from="Area2D - DamageCol" to="." method="_on_Area2D__DamageCol_body_entered"]
